2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AddinAuthoring/AddinDescriptionView.cs:
	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs: Improve
	formatting of saved .addin files.

	* MonoDevelop.AddinAuthoring/AddinData.cs: Remove debug code.

	* MonoDevelop.AddinAuthoring.CodeCompletion/CodeCompletionExtension.cs:
	Track api changes.

2009-10-01  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* addin-reference.png:
	* MonoDevelop.AddinAuthoring.sln:
	* MonoDevelop.AddinAuthoring.make:
	* MonoDevelop.AddinAuthoring.csproj:
	* MonoDevelop.AddinAuthoring.addin.xml:
	* MonoDevelop.AddinAuthoring/AddinData.cs:
	* MonoDevelop.AddinAuthoring/AddinDescriptionView.cs:
	* MonoDevelop.AddinAuthoring/AddinProjectExtension.cs:
	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs:
	* MonoDevelop.AddinAuthoring/AddinDescriptionDisplayBinding.cs:
	* MonoDevelop.AddinAuthoring.NodeBuilders/ReferenceNodeBuilder.cs:
	* MonoDevelop.AddinAuthoring.NodeBuilders/AddinFolderNodeBuilder.cs:
	* MonoDevelop.AddinAuthoring.NodeBuilders/AddinReferenceNodeBuilder.cs:
	* MonoDevelop.AddinAuthoring.NodeBuilders/ReferencesFolderNodeBuilder.cs:
	* MonoDevelop.AddinAuthoring.NodeBuilders/ProjectFolderNodeBuilderExtension.cs:
	Ongoing work.

2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Bump mono-addins dependency.

2009-09-01  Lluis Sanchez Gual  <lluis@novell.com>

	* configure: Updated deps.

2009-08-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AddinAuthoring/SolutionAddinData.cs:
	* MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs:
	* MonoDevelop.AddinAuthoring/RegistryExtensionNode.cs: