@@ -1,3 +1,15 @@
+2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.AddinAuthoring/AddinData.cs:
+	* MonoDevelop.AddinAuthoring/SolutionAddinData.cs:
+	* MonoDevelop.AddinAuthoring/AddinProjectExtension.cs:
+	* MonoDevelop.AddinAuthoring/AddinProjectReference.cs:
+	* MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs:
+	Introduced the ConfigurationSelector class to all methods that
+	previously took a configuration name as string. This
+	eliminates the ambiguity between solution configuration names
+	and project configuration names.
+
 2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* configure:
